# euphonica

./: .gitignore  .gitmodules  Cargo.toml  README.md  io.github.htkhiem.Euphonica-dev.json  meson.build  meson_options.txt  org.slamprust.Slamprust.json  slamprust.cmb  slamprust.ui
data/: gschemas.compiled  io.github.htkhiem.Euphonica.desktop.in  io.github.htkhiem.Euphonica.gschema.xml  io.github.htkhiem.Euphonica.metainfo.xml.in  meson.build  org.euphonia.Euphonia.desktop.in  org.euphonia.Euphonia.gschema.xml  org.euphonia.Euphonia.metainfo.xml.in  org.euphonica.Euphonica.desktop.in  org.euphonica.Euphonica.gschema.xml  org.euphonica.Euphonica.metainfo.xml.in  org.slamprust.Slamprust.desktop.in  org.slamprust.Slamprust.gschema.xml  org.slamprust.Slamprust.metainfo.xml.in
data/icons/: meson.build
po/: POTFILES  meson.build
src/: application.rs  background.rs  config.rs  config.rs.in  euphonia.gresource.xml  euphonica.gresource.xml  main.rs  meson.build  mpd_wrapper.rs  preferences.rs  slamprust.gresource.xml  utils.rs  window.rs  window.ui
src/cache/: controller.rs  mod.rs  placeholders.rs  sqlite.rs  state.rs
src/client/: albumart.rs  background.rs  lastfm.rs  mod.rs  password.rs  state.rs  stream.rs  wrapper.rs
src/client/common/: song.rs
src/client/subsystems/: player.rs
src/common/: album.rs  artist.rs  blend_mode.rs  inode.rs  marquee.rs  mod.rs  rating.rs  song.rs  sticker.rs  text_display.rs  theme_selector.rs
src/common/paintables/: blur.rs  fade.rs  fade_blur.rs  mod.rs
src/gtk/: album-cell.ui  album-content-view.ui  album-song-row.ui  album-view.ui  library-view.ui  marquee.ui  output.ui  player-bar.ui  preferences.ui  queue-row.ui  queue-view.ui  rating.ui  sidebar-button.ui  sidebar.ui  style.css  theme-selector.ui
src/gtk/player/: bar.ui  output.ui  pane.ui  playback-controls.ui  player-bar.ui  queue-row.ui  queue-view.ui  seekbar.ui  volume-knob.ui
src/gtk/preferences/: client.ui  dialog.ui  integrations.ui  library.ui  player.ui  provider-row.ui  ui.ui
src/lastfm/: controller.rs  models.rs
src/meta_providers/: base.rs  chain.rs  mod.rs  models.rs
src/meta_providers/lastfm/: controller.rs  mod.rs  models.rs
src/meta_providers/lrclib/: controller.rs  mod.rs  models.rs
src/meta_providers/musicbrainz/: controller.rs  mod.rs  models.rs
src/player/: bar.rs  controller.rs  fft.rs  knob.rs  mod.rs  output.rs  pane.rs  playback_controls.rs  queue_row.rs  queue_view.rs  ratio_center_box.rs  seekbar.rs
src/player/fft_backends/: backend.rs  fft.rs  fifo.rs  mod.rs  pipewire.rs
src/preferences/: client.rs  dialog.rs  integrations.rs  library.rs  mod.rs  player.rs  provider_row.rs  ui.rs
src/sidebar/: button.rs  mod.rs  sidebar.rs
