[package]
name = "euphonia"
version = "0.1.0"
edition = "2021"

[dependencies]
async-channel = "2.3.1"
chrono = "0.4.38"
fasthash = "0.4.0"
futures = "0.3.30"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
image = "0.25.1"
librsvg = "2.58.1"
mpd = "0.1.0"
once_cell = "1.19.0"
time = "0.3.36"
stretto = { version = "0.8", features = ["sync"] }

[dependencies.gtk]
package = "gtk4"
version = "0.9"
features = ["v4_14"]

[dependencies.uuid]
version = "1.9.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dependencies.adw]
package = "libadwaita"
version = "0.7"
features = ["v1_5"]
