[package]
name = "euphonia"
version = "0.1.0"
edition = "2021"

[dependencies]
async-channel = "2.3.1"
chrono = "0.4.38"
fasthash = "0.4.0"
futures = "0.3.30"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
image = "0.25.1"
librsvg = "2.58.1"
mpd = { path = "./rust-mpd" }
once_cell = "1.19.0"
time = { version = "0.3.36", features = ["formatting"] }
stretto = { version = "0.8", features = ["sync"] }
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
polodb_core = "4.4.2"
bson = "2.11.0"
serde = "1.0.207"
serde_json = "1.0.124"
html-escape = "0.2.13"
regex = "1.10.6"
rustc-hash = "2.0.0"
itertools = "0.13.0"
aho-corasick = "1.1.3"


[dependencies.gtk]
package = "gtk4"
version = "0.9"
features = ["v4_14"]

[dependencies.uuid]
version = "1.9.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dependencies.adw]
package = "libadwaita"
version = "0.7"
features = ["v1_5"]
