[package]
name = "euphonica"
version = "0.90.1"
edition = "2021"

[dev-dependencies]
rustls = "0.23.18" # GHSA ID GHSA-qg5g-gv98-5ffh
glib = "0.20.0"    # GHSA ID GHSA-wrw7-89jp-8q8g
idna = "1.0.0"     # CVE-2024-12242

[dependencies]
async-channel = "2.3.1"
chrono = "0.4.38"
futures = "0.3.30"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
image = "0.25.1"
librsvg = "2.58.1"
mpd = { path = "./rust-mpd" }
once_cell = "1.19.0"
time = { version = "0.3.36", features = ["formatting"] }
stretto = { version = "0.8", features = ["sync"] }
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
bson = "2.11.0"
serde = "1.0.207"
serde_json = "1.0.124"
html-escape = "0.2.13"
regex = "1.10.6"
rustc-hash = "2.0.0"
itertools = "0.13.0"
aho-corasick = "1.1.3"
musicbrainz_rs = { version = "0.5.0", features = ["blocking"], default-features = false }
mpris-server = "0.8.1"
async-lock = "3.4.0"
libblur = "0.14.4"
keyring = { version = "3", features = ["linux-native-sync-persistent"] }
gio = { version = "0.20.7", features = ["v2_74"] }
rustls = "0.23.18" # GHSA ID GHSA-qg5g-gv98-5ffh
glib = "0.20.0"    # GHSA ID GHSA-wrw7-89jp-8q8g
idna = "1.0.0"     # CVE-2024-12242
libc = "0.2.169"
spectrum-analyzer = "=0.5.2"
ashpd = "0.10.2"
tokio = { version = "1", features = ["rt-multi-thread"] }
pipewire = {version = "0.8.0", features = ["v0_3_44"] }
duplicate = "2.0.0"
ringbuffer = "0.15.0"
rusqlite = { version = "0.33.0", features = ["time"] }
base64 = "0.22.1"
r2d2_sqlite = "0.26.0"
r2d2 = "0.8.10"
auto-palette = "0.6.0"

[dependencies.gtk]
package = "gtk4"
version = "0.9"
features = ["v4_14"]

[dependencies.uuid]
version = "1.9.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dependencies.adw]
package = "libadwaita"
version = "0.7"
features = ["v1_6"]

[profile.dev]
debug = 1

[profile.release]
strip = true # Should reduce binary size on Linux
lto = true
